# seli

./: .pre-commit-config.yaml  404.html  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: build-docs.yaml  test.yaml
docs/: mkdocs.yml
docs/docs/: index.md
search/: search_index.json
seli/: config_readers.py  logging_helper.py  main.py  workers.py
tests/: test_seli.py
