[tool.poetry]
name = "seli"
version = "1.0.0"
description = "extendable selenium worker"
license = "MIT"
authors = ["yemaney <yemane_@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
selenium = "^4.4.3"
webdriver-manager = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs-material = "^8.4.2"
pre-commit = "^2.20.0"
pytest-cov = "^3.0.0"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
